<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/teamALayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:drawable/alert_light_frame"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/teamATitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/team_a_name"
                android:textAllCaps="false"
                android:textColor="@color/colorTeamA"
                android:textSize="25sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif" />

            <TextView
                android:id="@+id/teamAScoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="0"
                android:textColor="@color/colorTeamA"
                android:textSize="100sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/aPlus1Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:onClick="APlus1_Click"
                android:text="@string/plus1_text"
                android:textAllCaps="false"
                android:textSize="17sp" />

            <Button
                android:id="@+id/aPlus2Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:onClick="APlus2_Click"
                android:text="@string/plus2_text"
                android:textAllCaps="false"
                android:textSize="17sp" />

            <Button
                android:id="@+id/aPlus3Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:onClick="APlus3_Click"
                android:text="@string/plus3_text"
                android:textAllCaps="false"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/teamBLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:drawable/alert_light_frame"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/teamBTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/team_b_name"
                android:textAllCaps="false"
                android:textColor="@color/colorTeamB"
                android:textSize="25sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif" />

            <TextView
                android:id="@+id/teamBScoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="0"
                android:textColor="@color/colorTeamB"
                android:textSize="100sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bPlus1Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:onClick="BPlus1_Click"
                android:text="@string/plus1_text"
                android:textAllCaps="false"
                android:textSize="17sp" />

            <Button
                android:id="@+id/bPlus2Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:onClick="BPlus2_Click"
                android:text="@string/plus2_text"
                android:textAllCaps="false"
                android:textSize="17sp" />

            <Button
                android:id="@+id/bPlus3Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:onClick="BPlus3_Click"
                android:text="@string/plus3_text"
                android:textAllCaps="false"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/undoButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_green_dark"
            android:onClick="undo_Click"
            android:text="@string/undo_text"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/resetButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_orange_dark"
            android:onClick="reset_Click"
            android:text="@string/reset_text"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>